# openalgo-python-library

./: .gitignore  CLAUDE.md  MIGRATION_SUMMARY.md  PKG-INFO  RALPH_PLAN.md  README.md  RUST_MIGRATION_TRACKER.csv  pyproject.toml  setup.py
.github/workflows/: CI.yml
benchmark/: FULL_BENCHMARK.md  SPEED.md  TALIB_COMPARISON.md  TALIB_PERF_COMPARE.md  ci_smoke.py  hybrid_parity.py  oscillator_parity.py  parity.py  speed_bench.py  statistics_parity.py  talib_compare.py  talib_extra_parity.py  talib_perf_compare.py  trend_parity.py  volatility_parity.py  volume_parity.py  wrapper_parity.py
docs/: DOCUMENTATION_INDEX.md  TALIB_COMPATIBILITY.md  TECHNICAL_INDICATORS_SUMMARY.md
examples/: whatsapp_examples.py
openalgo/: __init__.py  account.py  base.py  data.py  numba_shim.py  options.py  orders.py  strategy.py  telegram.py  utilities.py  whatsapp.py
openalgo/indicators/: __init__.py  _backend.py  hybrid.py  momentum.py  oscillators.py  statistics.py  talib_extra.py  trend.py  volatility.py  volume.py
rust/: Cargo.toml
rust/oa_core/src/: lib.rs
rust/oa_py/: Cargo.toml
rust/oa_py/src/: lib.rs
